--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "init:data": "node --env-file=.env scripts/dummy_data/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.7.0",
