--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.7.0",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
