--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.7.0",
+    "@hono/zod-validator": "^0.2.1",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "hono": "^3.12.12",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
