--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "hono": "^3.12.12",
+    "ioredis": "^5.4.1",
     "mongoose": "^8.1.1",
+    "slugify": "^1.6.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
