--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon src/index.js",
     "dev": "NODE_ENV=development nodemon --env-file=.env src/index.js",
     "init:data_development": "NODE_ENV=development node --env-file=.env scripts/dummy_data/index.js",
     "init:data_production": "NODE_ENV=production node scripts/dummy_data/index.js",
@@ -13,6 +14,7 @@
     "@hono/node-server": "^1.7.0",
     "@hono/zod-validator": "^0.2.1",
     "amqplib": "^0.10.3",
+    "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
