--- a/compose.yml
+++ b/compose.yml
@@ -66,7 +66,7 @@ services:
       - 3000:3000
     environment:
       - NODE_ENV=development
-      - MONGODB_URI=mongodb+srv://development:development@cluster0.gv6linz.mongodb.net/mnhs_student_record?retryWrites=true&w=majority&appName=Cluster0
+      - MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.gv6linz.mongodb.net/mnhs_student_record?retryWrites=true&w=majority&appName=Cluster0
       - ACCESS_TOKEN_TTL=86400
       - ADMIN_ACCESS_TOKEN_SECRET=admin-access-token
       - ADMIN_ACCESS_TOKEN_KEY=x-mnhs-admin-token
